@@ -95,6 +95,7 @@ Support for adding custom validation logic to StreamField blocks has been formal
  * Update Algolia DocSearch to use new application and correct versioning setup (Thibaud Colas)
  * Move snippet choosers and model check registration to `SnippetViewSet.on_register()` (Sage Abdullah)
  * Remove unused snippets delete-multiple view (Sage Abdullah)
+ * Improve performance of determining live page URLs across the admin interface using [`pageurl` template tag](performance_page_urls) (Satvik Vashisht)
 
 
 ## Upgrade considerations
