@@ -1,5 +1,5 @@
 
-
+{% load wagtailcore_tags %}
 {% load i18n wagtailadmin_tags %}
 {% if last_edits %}
     {% trans "Your most recent edits" as heading %}
@@ -36,11 +36,10 @@
                                     <li><a href="{% url 'wagtailadmin_pages:view_draft' page.id %}" class="button button-small button-secondary" target="_blank" rel="noreferrer">{% trans 'Draft' %}</a></li>
                                 {% endif %}
                                 {% if page.live %}
-                                    {% with page_url=page.url %}
-                                        {% if page_url is not None %}
-                                            <li><a href="{{ page_url }}" class="button button-small button-secondary" target="_blank" rel="noreferrer">{% trans 'Live' %}</a></li>
-                                        {% endif %}
-                                    {% endwith %}
+                                    {% pageurl page as page_url %}
+                                    {% if page_url is not None %}
+                                        <li><a href="{{ page_url }}" class="button button-small button-secondary" target="_blank" rel="noreferrer">{% trans 'Live' %}</a></li>
+                                    {% endif %}
                                 {% endif %}
                             </ul>
                         </td>
